--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -441,7 +441,7 @@ jobs:
         env:
           VERSION: ${{ needs.get-release.outputs.version }}
         run: |
-          VERSION=${VERSION:-$(date +%y%m%d%H%M)}
+          VERSION=${VERSION:-$(date +%y%m%d%H%M)} # Use current time as version if not specified
           cd ui/flutter
           flutter build web --web-renderer html
           cd ../../
@@ -469,11 +469,12 @@ jobs:
               || true
             done
           done
-
-          wget -O qbuild_2.3.13.tar.gz "https://github.com/WHJWNAVY/QpkgBuildTools/releases/download/qbuild_2.3.13/qbuild_2.3.13.tar.gz"
-          tar -zxf qbuild_2.3.13.tar.gz
-          [[ -d qbuild ]] || exit 1
-          export PATH=$(pwd)/qbuild/bin:${PATH}
+          sudo apt update -y
+          sudo apt install -y pv python2 bsdmainutils
+          wget -O qdk2_0.32.bionic_amd64.deb "https://github.com/qnap-dev/qdk2/releases/download/v0.32/qdk2_0.32.bionic_amd64.deb"
+          dpkg -X qdk2_0.32.bionic_amd64.deb qdk2 # Direct installs will fail due to missing dependencies!
+          [[ -d qdk2 ]] || exit 1
+          export PATH=$(pwd)/qdk2/usr/bin:$(pwd)/qdk2/usr/share/qdk2/QDK/bin:${PATH}
           wget -O Gopeed.template.tar.gz "https://github.com/WHJWNAVY/QpkgBuildTools/releases/download/qbuild_2.3.13/Gopeed.template.tar.gz"
           tar -zxf Gopeed.template.tar.gz
           [[ -d Gopeed ]] || exit 1
@@ -497,6 +498,9 @@ jobs:
           cd Gopeed
           sed -i -e 's/__QPKG_VER__/${VERSION}/g' qpkg.cfg
           qbuild && cp -ra build/*.qpkg ../dist/zip/
+          for f in ../dist/zip/*; do
+            echo ">>> dist=[${f}]"
+          done
           cd ..
       - name: Upload
         uses: shogo82148/actions-upload-release-asset@v1
